changelog+videncode-info

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 				</div><div class="Feature">
 					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=sounds"><div class="TextIcon TextIconAudio"></div><span class="TextIconText FeatureText">Sounds</span></a>
 				</div><div class="Feature">
+					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=videncode"><div class="TextIcon TextIconVidencode"></div><span class="TextIconText FeatureText">Videncode</span></a>
+				</div><div class="Feature">
 					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=links"><div class="TextIcon TextIconLink"></div><span class="TextIconText FeatureText">Linkification</span></a>
 				</div><div class="Feature">
 					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=uploader"><div class="TextIcon TextIconUpload"></div><span class="TextIconText FeatureText">Uploading</span></a>
@@ -250,6 +252,13 @@
 				<ul>
 					<li>In addition to videos and sounds, Soundcloud media can also be embedded</li>
 					<li>Soundcloud links are replaced similarly to Youtube/Video links</li>
+				</ul>
+			</div>
+			<div class="ContentHeader" multi_id="videncode"><span class="HoverShowControl"><span class="ContentHeaderTitle">Videncode</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=videncode">Hardlink</a></span></span></div>
+			<div class="ContentBody">
+				<ul>
+					<li>A file type similar to the Sounds files, except it supports .webm video as well</li>
+					<li>For more information on these files, visit <a href="http://dnsev.github.com/ve/" target="_blank">the homepage</a></li>
 				</ul>
 			</div>
 			<div class="ContentHeader" multi_id="uploader"><span class="HoverShowControl"><span class="ContentHeaderTitle">Uploader</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=uploader">Hardlink</a></span></span></div>
