oc-guide-update

--- a/index.html
+++ b/index.html
@@ -538,14 +538,14 @@
 		<div class="ContentHeader"><span class="ContentHeaderTitle">Original Content</span>:</div>
 		<div class="ContentBody">
 			<p>So you want to create original content? Here's a guide:</p>
-			<p class="AsteriskMessage"><i>Be sure to click the </i><a class="InternalLink" href="#oc?activate=image_1">image</a><i> links that appear on the right if you get lost</i></p>
+			<p class="AsteriskMessage"><i>Be sure to click the </i><a class="InternalLink" href="#oc?activate=image_1" maintain="tips,video">image</a><i> links that appear on the right if you get lost</i></p>
 
-			<div class="ContentHeader" multi_id="sounds_image"><span class="HoverShowControl"><span class="ContentHeaderTitle">Creating the sounds-image</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=sounds_image">Hardlink</a></span></span></div>
+			<div class="ContentHeader" multi_id="sounds_image"><span class="HoverShowControl"><span class="ContentHeaderTitle">Creating the sounds-image</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=sounds_image" maintain="tips,video">Hardlink</a></span></span></div>
 			<div class="ContentBody">
 			<ol class="SpacedList">
 				<li multi_id="step_1">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_1">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide0.png" href_update="#oc?activate=image_1" target="_blank" multi_id="image_1">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide0.png" href_update="#oc?activate=image_1" target="_blank" multi_id="image_1" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>All 3 files downloaded into the folder</li>
 								<li>ffmpeg.exe hasn't been extracted yet</li>
@@ -563,7 +563,7 @@
 				</li>
 				<li multi_id="step_2">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_2">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide1.png" href_update="#oc?activate=image_2" target="_blank" multi_id="image_2">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide1.png" href_update="#oc?activate=image_2" target="_blank" multi_id="image_2" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>ffmpeg.exe has now been extracted</li>
 								<li>You can delete the .7z file after you are done</li>
@@ -578,7 +578,7 @@
 				</li>
 				<li multi_id="step_3">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_3">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide2.png" href_update="#oc?activate=image_3" target="_blank" multi_id="image_3">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide2.png" href_update="#oc?activate=image_3" target="_blank" multi_id="image_3" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>Image file and sound file have been added to the folder</li>
 								<li>Sound files can be in .mp3, .flac, and other file types ffmpeg supports</li>
@@ -592,7 +592,7 @@
 				</li>
 				<li multi_id="step_4">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_4">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide3.png" href_update="#oc?activate=image_4" target="_blank" multi_id="image_4">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide3.png" href_update="#oc?activate=image_4" target="_blank" multi_id="image_4" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>Dragging the image and sound onto <i>ogglify.exe</i></li>
 								<li>If you don't mind not getting the best sound quality, you can drag them onto <i>ogglify-fast.bat</i> instead</li>
@@ -607,7 +607,7 @@
 				</li>
 				<li multi_id="step_5">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_5">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide4.png" href_update="#oc?activate=image_5" target="_blank" multi_id="image_5">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide4.png" href_update="#oc?activate=image_5" target="_blank" multi_id="image_5" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>The command prompt shown working its magic</li>
 								<li>Typically takes a few seconds based on how big your sound is</li>
@@ -622,7 +622,7 @@
 				</li>
 				<li multi_id="step_6">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_6">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide5.png" href_update="#oc?activate=image_6" target="_blank" multi_id="image_6">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide5.png" href_update="#oc?activate=image_6" target="_blank" multi_id="image_6" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>A new file has been created</li>
 								<li>Note how it is much larger than the original</li>
@@ -637,12 +637,12 @@
 			</ol>
 			</div>
 
-			<div class="ContentHeader" multi_id="posting"><span class="HoverShowControl"><span class="ContentHeaderTitle">Posting your image</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=posting">Hardlink</a></span></span></div>
+			<div class="ContentHeader" multi_id="posting"><span class="HoverShowControl"><span class="ContentHeaderTitle">Posting your image</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=posting" maintain="tips,video">Hardlink</a></span></span></div>
 			<div class="ContentBody">
 			<ol class="SpacedList" start="7">
 				<li multi_id="step_7">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_7">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide6.png" href_update="#oc?activate=image_7" target="_blank" multi_id="image_7">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide6.png" href_update="#oc?activate=image_7" target="_blank" multi_id="image_7" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>The quick reply box (using 4chan x) shown with the uploader panel open</li>
 								<li>If you haven't disabled it in the settings, the uploader panel should automatically open</li>
@@ -657,7 +657,7 @@
 				</li>
 				<li multi_id="step_8">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_8">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide7.png" href_update="#oc?activate=image_8" target="_blank" multi_id="image_8">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide7.png" href_update="#oc?activate=image_8" target="_blank" multi_id="image_8" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>The resulting image shown uploaded in a post; the filename has been preserved</li>
 								<li>The sounds link has been clicked and the sound is listed in the post</li>
@@ -672,7 +672,7 @@
 				</li>
 				<li multi_id="step_9">
 					<div class="GuideLink InstructionsImageLinkContainer" href="#.?activate=image_9">
-						<a class="ImageLink InstructionsImageLink" href="image_oc_guide8.png" href_update="#oc?activate=image_9" target="_blank" multi_id="image_9">image</a><div class="ImageDescription">
+						<a class="ImageLink InstructionsImageLink" href="image_oc_guide8.png" href_update="#oc?activate=image_9" target="_blank" multi_id="image_9" maintain="tips,video">image</a><div class="ImageDescription">
 							<ul>
 								<li>The sound shown being played in the player</li>
 							</ul>
@@ -689,8 +689,9 @@
 			<div class="ContentHeader" multi_id="congratulations"><span class="ContentHeaderTitle">Congratulations</span>: You have posted original content!</div>
 			<div class="ContentBodyStub"></div>
 
+
 			<span class="PageVariableDisplayInv" pvar="tips">
-			<div class="ContentHeader" multi_id="tips"><span class="HoverShowControl"><span class="ContentHeaderTitle">Tips</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?tips&scroll=tips">Hardlink</a></span></span></div>
+			<div class="ContentHeader" multi_id="tips"><span class="HoverShowControl"><span class="ContentHeaderTitle">Tips</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=tips" maintain="tips,video">Hardlink</a></span></span></div>
 			<div class="ContentBody">
 				<p>For anybody who cares enough to view this section, here are some tips for using these applications:</p>
 
@@ -715,14 +716,37 @@
 					</li>
 				</ol>
 			</div>
+
 			</span>
+
+
+
+			<span class="PageVariableDisplayInv" pvar="video">
+			<div class="ContentHeader" multi_id="videncode"><span class="HoverShowControl"><span class="ContentHeaderTitle">Including video</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=videncode" maintain="tips,video">Hardlink</a></span></span></div>
+			<div class="ContentBody">
+				<p>An early format for including short video clips is now available: <a href="http://dnsev.github.com/ve/" target="_blank">Videncode</a></p>
+
+				<p>The application includes a GUI, and the site includes a step by step guide for making content.</p>
+
+				<p>Best usage tips:</p>
+
+				<ul class="SpacedList">
+					<li>Video can be looped for a specific time, similar to a .gif (but better quality)</li>
+					<li>Short video clips can be encoded; it's best not to try and encode too long of a video, or quality will suffer</li>
+					<li>Currently, it's preferred to keep the ".ve.<i>ext</i>" in the file's name, as it is an indicator of the content type</li>
+				</ul>
+			</div>
+			</span>
+
 
 		</div>
 
-		<div class="ExtrasContainerPre PageVariableDisplay" pvar="tips"></div>
-		<div class="ExtrasContainer PageVariableDisplay" pvar="tips">
-			<div class="Extra">
-				<a class="InternalLink" href="#.?tips">Usage Tips</a>
+		<div class="ExtrasContainerPre"></div>
+		<div class="ExtrasContainer">
+			<div class="Extra PageVariableDisplay" pvar="tips">
+				<a class="InternalLink" href="#.?tips" maintain="tips,video">Usage Tips</a>
+			</div><div class="Extra PageVariableDisplay" pvar="video">
+				<a class="InternalLink" href="#.?video" maintain="tips,video">Video</a>
 			</div>
 		</div>
 
