--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="TitleContainer">
 	<div class="TitleContainerInner"><a class="Title" href="">4cs</a><div class="AuthorContainer"><a class="AuthorLink" href="https://github.com/dnsev">dnsev</a></div>
 	</div><div class="SubTitleSeparator">/</div><div class="TitleContainerInner"><div class="SubTitleContainer"><div class="SubTitle">4chan Media Player</div><a class="Version" href="#changes"></a></div>
-	<div class="SubTitleDescription"><a class="NavigationLink NavigationLinkCurrent" id="navigation_install" href="https://raw.github.com/dnsev/4cs/master/web/4cs.user.js">install</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_changes" href="changelog.txt">changes</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_issues" href="https://github.com/dnsev/4cs/issues">issues</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_source" href="https://github.com/dnsev/4cs">source</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_about" href="#about">about</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_oc" href="#oc">oc</a></div>
+	<div class="SubTitleDescription"><a class="NavigationLink NavigationLinkCurrent" id="navigation_install" href="https://raw.github.com/dnsev/4cs/master/web/4cs.user.js">install</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_changes" href="changelog.txt">changes</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_issues" href="https://github.com/dnsev/4cs/issues">issues</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_source" href="https://github.com/dnsev/4cs">source</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_about" href="#about">about</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_guide" href="#guide">guide</a></div>
 	</div>
 </div>
 
@@ -534,7 +534,7 @@
 			<p>and <a>You</a>: for using the script.</p>
 		</div>
 	</div>
-	<div class="Content ContentWidth" id="content_oc">
+	<div class="Content ContentWidth" id="content_guide">
 		<div class="ContentHeader"><span class="ContentHeaderTitle">Original Content</span>:</div>
 		<div class="ContentBody">
 			<p>So you want to create original content? Here's a guide:</p>
