--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
 		<div class="ContentHeader"><span class="ContentHeaderTitle Help">Userscript not working</span><span class="PageVariableDisplayInv" pvar="help">:</span><span class="Help PageVariableDisplay PageVariableDisplayOff" pvar="help"><span class="HardlinkSeparator">/</span><a class="Hardlink" href="#" id="hardlink_enable_help">Hardlink</a></span></div>
 		<div class="ContentBody Help">
 			<ul class="ContentInstructionList">
-				<li>Be sure to uninstall any previous userscript players</li>
+				<li>Be sure to uninstall any previous userscripts</li>
 				<li>If you use NoScript, be sure to allow scripts</li>
 				<li class="Firefox">If you use <a href="https://addons.mozilla.org/en-us/firefox/addon/scriptish/" target="_blank">Scriptish</a>, try using <a href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a></li>
+				<li class="Firefox">If you <i>are</i> using <a href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a>, try updating it</li>
 				<li class="Chrome">If you aren't using <a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo" target="_blank">Tampermonkey</a>, try using it</li>
 			</ul>
 		</div>
